--- a/app/views/lessons/_result.html.erb
+++ b/app/views/lessons/_result.html.erb
@@ -1,4 +1,4 @@
-<li><%= f.label f.object.word.content %></li>
+<h4><%= f.label f.object.word.content %></h4>
 <div class="lesson_word">
   <% f.object.word.answers.each do |answer| %>
     <div class="word_answer">
