--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -6,7 +6,8 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 clear"></div>
-    <div class="col-lg-4">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-2">
       <%= link_to t("page.admin.categories.add"), new_admin_category_path,
         class: "btn btn-info" %>
     </div>
