--- a/app/views/admin/words/index.html.erb
+++ b/app/views/admin/words/index.html.erb
@@ -16,15 +16,23 @@
     </br>
     <div class="form-group row">
       <div class="col-xs-3"></div>
-      <div class="col-xs-5">
+      <div class="col-xs-4">
         <%= text_field_tag :search, params[:search], class: "form-control",
           placeholder: t("page.word.search_placeholer") %>
       </div>
-      <div class="col-xs-3">
-        <%= submit_tag t("page.word.filter"), class: "btn btn-primary clear" %>
+      <div class="col-xs-1">
+        <%= submit_tag t("page.word.filter"),
+          class: "btn btn-primary glyphicon glyphicon-filter clear" %>
         <% end %>
       </div>
+      <div class ="col-xs-2"></div>
+      <div class ="col-xs-1">
+        <%= link_to t("page.admin.words.link_create_word"),
+          admin_create_word_path,
+          class: "btn btn-success glyphicon glyphicon-plus" %>
+      </div>
     </div>
+    </br>
   </div>
   <%= render "words/index.html.erb" %>
 </div>
