--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,9 @@
   <div class="profile">
     <div class="profile_left">
       <div class="row">
-        <div class="col-lg-5">
+        <div class="col-lg-7">
           <h1><%= t "page.users.profile.my_profile", user_name: @user.name %></h1>
-          <table class="table table-user-information">
+          <table class="tbody_profile table">
             <tbody>
               <tr>
                 <td><b><%= t "page.users.profile.td_name" %></b></td>
@@ -34,45 +34,49 @@
     </div>
   </div>
   <div class="panel-body">
-    <div class="col-md-9 col-lg-5">
+    <div class="col-md-9 col-lg-7">
       <h3 class="lessons_learned_list">
         <%= t "page.users.profile.title_lesson" %>
       </h3>
-      <div class="table-responsive table-condensed">
-        <table class="table" id="list_user">
-          <thead>
-            <tr>
-              <th><%= t "page.users.profile.td_index" %></th>
-              <th><%= t "page.users.profile.td_date" %></th>
-              <th><%= t "page.users.profile.td_status" %></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @lessons.each.with_index do |lesson, index| %>
-              <% if current_user? lesson.user %>
-                <tr>
-                  <td><%= index+1 %></td>
-                  <td><%= localize_time lesson.created_at %></td>
-                  <% if lesson.is_complete? %>
-                    <td>
-                      <%= link_to t("page.users.profile.stt_finish"),
-                        lesson_path(lesson), class: "btn btn-success" %>
-                    </td>
-                  <% else %>
-                    <td>
-                      <%= link_to t("page.users.profile.stt_continue"),
-                        lesson_path(lesson), class: "btn btn-primary" %>
-                    </td>
-                  <% end %>
-                </tr>
+      <% if @lesson %>
+        <div class="table-responsive table-condensed">
+          <table class="table" id="list_user">
+            <thead>
+              <tr>
+                <th><%= t "page.users.profile.td_index" %></th>
+                <th><%= t "page.users.profile.td_date" %></th>
+                <th><%= t "page.users.profile.td_status" %></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @lessons.each.with_index do |lesson, index| %>
+                <% if current_user? lesson.user %>
+                  <tr>
+                    <td><%= index+1 %></td>
+                    <td><%= localize_time lesson.created_at %></td>
+                    <% if lesson.is_complete? %>
+                      <td>
+                        <%= link_to t("page.users.profile.stt_finish"),
+                          lesson_path(lesson), class: "btn btn-success" %>
+                      </td>
+                    <% else %>
+                      <td>
+                        <%= link_to t("page.users.profile.stt_continue"),
+                          lesson_path(lesson), class: "btn btn-primary" %>
+                      </td>
+                    <% end %>
+                  </tr>
+                <% end %>
               <% end %>
-            <% end %>
-          </tbody>
-        </table>
-        <%= will_paginate @lessons %>
-      </div>
+            </tbody>
+          </table>
+          <%= will_paginate @lessons %>
+        </div>
+      <% else %>
+        <h5><%= t "page.users.profile.msg_not_lesson" %></h5>
+      <% end %>
     </div>
-    <div class="col-md-9 col-lg-7">
+    <div class="col-md-9 col-lg-5">
       <h3 class="activities"><%= t "page.users.profile.title_activities" %></h3>
       <table class="table table_activities">
         <%= render partial: "shared/activity", collection: @activities %>
