--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,7 +19,7 @@
     </section>
   </div>
   <div class="jumbotron col-md-9 pull-right">
-    <h3 class="center"><%= t ".activity_title" %></h3>
+    <h3 class="center"><%= t "page.users.profile.title_activities" %></h3>
     <table class="table table_activities">
       <%= render partial: "shared/activity", collection: @activities %>
     </table>
