--- a/app/views/admin/categories/_category.html.erb
+++ b/app/views/admin/categories/_category.html.erb
@@ -12,8 +12,8 @@
       <%= link_to t("page.admin.categories.link_edit"),
         edit_admin_category_path(category), class: "btn btn-success btn-xs" %>
       <%= link_to t("page.admin.categories.link_delete"), [:admin, category],
-        method: :delete, data: {confirm: t("page.messages.notice"),
-        remote: true}, class: "btn btn-danger btn-xs" %>
+        method: :delete, data: {confirm: t("page.messages.notice")},
+        class: "btn btn-danger btn-xs" %>
     </div>
   </div>
 </div>
